# church-stream-sync

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: build.yml
config/: default.json
installer/: __init__.py  setup.py  uninstall.py
src/: __init__.py  build.py  main.py  shutdown.py
src/core/: __init__.py  config.py  logger.py  network.py  validators.py  wol.py
src/gui/: __init__.py  notification.py  shutdown_progress.py  startup.py  tray.py
src/service/: __init__.py  background.py
src/utils/: __init__.py  windows.py
